k8s/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: engagement-platform-prod
  labels:
    name: engagement-platform-prod
    environment: production
